<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll" android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="16dp">
        <TextView android:id="@+id/status_title" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
            android:accessibilityLiveRegion="polite" android:layout_marginTop="8dp" />
        <TextView android:id="@+id/status" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="8dp" android:layout_marginBottom="16dp" />
        <Button android:id="@+id/connect" style="@style/Action" android:text="@string/connect" />
        <Button android:id="@+id/check" style="@style/Action" android:text="@string/check" />
        <Button android:id="@+id/restore" style="@style/Action" android:text="@string/restore" />
        <Button android:id="@+id/add_tile" style="@style/Action" android:text="@string/add_tile" />
        <Switch android:id="@+id/notifications" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:minHeight="56dp"
            android:layout_marginTop="16dp" android:text="@string/notifications"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</ScrollView>
